# gtk4Sample

./: CMakeLists.txt  main.c  main_window.c  person.c  product.c
include/: main_window.h  person.h  product.h
